--- a/index.html
+++ b/index.html
@@ -61,5 +61,74 @@
         </li>
       </ul>
     </div>
+
+    <div class="portfolio-container">
+      <div class="offer-head">
+        <span>PORTFOLIO</span>
+        <h3>What you can DO</h3>
+      </div>
+
+      <ul class="portfolio-item">
+        <li>
+          <div class="img-item">
+            <div class="img-text img-text-container">
+              <h5>STATIONNARY</h5>
+              <p>
+                A yellow pencil with envelopes on a clean, blue <br />backdrop!
+              </p>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="img-item2">
+            <div class="img-text img-text-container">
+              <h5>ICECREAM</h5>
+              <p>
+                A dark blue background with a colored pencil, a<br />
+                clip, and a tiny ice cream cone!
+              </p>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="img-item3">
+            <div class="img-text img-text-container">
+              <h5>STRAWBERRIES</h5>
+              <p>
+                Strawberries are such a tasty snack, especially with<br />
+                a little sugar on top!
+              </p>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="img-item4">
+            <div class="img-text img-text-container">
+              <h5>WORKSPACE</h5>
+              <p>
+                A yellow workspace with some scissors, pencils,<br />
+                and other objects.
+              </p>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
+
+    <div class="link-container">
+      <ul>
+        <li>
+          <i class="fab fa-facebook-f"></i>
+        </li>
+        <li>
+          <i class="fab fa-twitter"></i>
+        </li>
+        <li>
+          <i class="fab fa-github"></i>
+        </li>
+      </ul>
+    </div>
+
+    <footer>&copy; Copyright 2021 HTML.am</footer>
   </body>
 </html>
